--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -11,8 +11,8 @@
         <import type="android.view.View" />
 
         <variable
-            name="timer"
-            type="com.kamil184.focustasks.model.Timer" />
+            name="viewModel"
+            type="com.kamil184.focustasks.ui.timer.TimerViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,8 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="false"
-            android:max="@{timer.length}"
-            android:progress="@{timer.length - timer.timeRemaining}"
+            android:max="@{viewModel.timer.length}"
+            android:progress="@{viewModel.timer.length - viewModel.timer.timeRemaining}"
             style="@style/TimerProgressBar"
             app:indicatorSize="@dimen/timer_size_big"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -38,7 +38,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text='@{timer.timeRemaining/60000 + ":" + (timer.timeRemaining%60000/1000 > 9 ? timer.timeRemaining%60000/1000 : "0" + timer.timeRemaining%60000/1000)}'
+            android:text='@{viewModel.timer.timeRemaining/60000 + ":" + (viewModel.timer.timeRemaining%60000/1000 > 9 ? viewModel.timer.timeRemaining%60000/1000 : "0" + viewModel.timer.timeRemaining%60000/1000)}'
             android:textColor="@color/design_default_color_primary"
             android:textSize="72sp"
             app:layout_constraintBottom_toBottomOf="@id/timer_progress"
@@ -54,9 +54,9 @@
             android:layout_marginStart="36dp"
             android:layout_marginEnd="36dp"
             android:layout_marginBottom="36dp"
-            android:onClick="@{() -> timer.startTimer()}"
-            android:visibility="@{timer.state == TimerState.Running ? View.GONE : View.VISIBLE}"
-            android:text="@{timer.state == TimerState.Stopped ? @string/start : @string/resume}"
+            android:onClick="@{() -> viewModel.timer.startTimer()}"
+            android:visibility="@{viewModel.timer.state == TimerState.Running ? View.GONE : View.VISIBLE}"
+            android:text="@{viewModel.timer.state == TimerState.Stopped ? @string/start : @string/resume}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,9 +71,9 @@
             android:layout_marginStart="36dp"
             android:layout_marginEnd="18dp"
             android:layout_marginBottom="36dp"
-            android:onClick="@{() -> timer.stopTimer()}"
+            android:onClick="@{() -> viewModel.timer.stopTimer()}"
             android:text="@string/stop"
-            android:visibility="@{timer.state != TimerState.Running ? View.GONE : View.VISIBLE}"
+            android:visibility="@{viewModel.timer.state != TimerState.Running ? View.GONE : View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/pause_button"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -86,9 +86,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="36dp"
             android:layout_marginBottom="36dp"
-            android:onClick="@{() -> timer.pauseTimer()}"
+            android:onClick="@{() -> viewModel.timer.pauseTimer()}"
             android:text="@string/pause"
-            android:visibility="@{timer.state != TimerState.Running ? View.GONE : View.VISIBLE}"
+            android:visibility="@{viewModel.timer.state != TimerState.Running ? View.GONE : View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/stop_button"
