Background countDownTimer is completed

--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -54,7 +54,7 @@
             android:layout_marginStart="36dp"
             android:layout_marginEnd="36dp"
             android:layout_marginBottom="36dp"
-            android:onClick="@{() -> viewModel.timer.startTimer()}"
+            android:onClick="@{() -> viewModel.timer.changeState(TimerState.Running)}"
             android:visibility="@{viewModel.timer.state == TimerState.Running ? View.GONE : View.VISIBLE}"
             android:text="@{viewModel.timer.state == TimerState.Stopped ? @string/start : @string/resume}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,7 @@
             android:layout_marginStart="36dp"
             android:layout_marginEnd="18dp"
             android:layout_marginBottom="36dp"
-            android:onClick="@{() -> viewModel.timer.stopTimer()}"
+            android:onClick="@{() -> viewModel.timer.changeState(TimerState.Stopped)}"
             android:text="@string/stop"
             android:visibility="@{viewModel.timer.state != TimerState.Running ? View.GONE : View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="36dp"
             android:layout_marginBottom="36dp"
-            android:onClick="@{() -> viewModel.timer.pauseTimer()}"
+            android:onClick="@{() -> viewModel.timer.changeState(TimerState.Paused)}"
             android:text="@string/pause"
             android:visibility="@{viewModel.timer.state != TimerState.Running ? View.GONE : View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
