--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,12 +13,12 @@
 
     <item
         android:id="@+id/navigation_calendar"
-        android:icon="@drawable/ic_calendar_24"
+        android:icon="@drawable/ic_calendar_month_24"
         android:title="@string/title_calendar" />
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_settings_24"
+        android:icon="@drawable/ic_person_24"
         android:title="@string/title_settings" />
 
 </menu>
