--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="TimerProgressBar" parent="Widget.MaterialComponents.CircularProgressIndicator">
+    <style name="Widget.App.TimerProgressBar" parent="Widget.MaterialComponents.CircularProgressIndicator">
         <item name="trackColor">@color/timerProgressBarTrackColor</item>
         <item name="trackThickness">4dp</item>
         <item name="trackCornerRadius">2dp</item>
         <!--TODO: видно засечки на trackCornerRadius-->
+    </style>
+
+    <style name="TextAppearance.App.Tab" parent="TextAppearance.MaterialComponents.Button">
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
