--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,63 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_light_primary">#994062</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#FFD9E4</color>
+    <color name="md_theme_light_onPrimaryContainer">#3E001D</color>
+    <color name="md_theme_light_secondary">#74575F</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#FFD9E3</color>
+    <color name="md_theme_light_onSecondaryContainer">#2A151C</color>
+    <color name="md_theme_light_tertiary">#7C5635</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFDCC0</color>
+    <color name="md_theme_light_onTertiaryContainer">#2E1500</color>
+    <color name="md_theme_light_error">#BA1B1B</color>
+    <color name="md_theme_light_errorContainer">#FFDAD4</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410001</color>
+    <color name="md_theme_light_background">#FCFCFC</color>
+    <color name="md_theme_light_onBackground">#1F1A1B</color>
+    <color name="md_theme_light_surface">#FCFCFC</color>
+    <color name="md_theme_light_onSurface">#1F1A1B</color>
+    <color name="md_theme_light_surfaceVariant">#F2DEE2</color>
+    <color name="md_theme_light_onSurfaceVariant">#514347</color>
+    <color name="md_theme_light_outline">#837377</color>
+    <color name="md_theme_light_inverseOnSurface">#FAEEEF</color>
+    <color name="md_theme_light_inverseSurface">#352F30</color>
+    <color name="md_theme_light_inversePrimary">#FFB1CB</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_primaryInverse">#FFB1CB</color>
+    <color name="md_theme_dark_primary">#FFB1CB</color>
+    <color name="md_theme_dark_onPrimary">#5E1033</color>
+    <color name="md_theme_dark_primaryContainer">#7B294A</color>
+    <color name="md_theme_dark_onPrimaryContainer">#FFD9E4</color>
+    <color name="md_theme_dark_secondary">#E3BDC7</color>
+    <color name="md_theme_dark_onSecondary">#422931</color>
+    <color name="md_theme_dark_secondaryContainer">#5A3F47</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFD9E3</color>
+    <color name="md_theme_dark_tertiary">#EFBD94</color>
+    <color name="md_theme_dark_onTertiary">#47290C</color>
+    <color name="md_theme_dark_tertiaryContainer">#623F20</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFDCC0</color>
+    <color name="md_theme_dark_error">#FFB4A9</color>
+    <color name="md_theme_dark_errorContainer">#930006</color>
+    <color name="md_theme_dark_onError">#680003</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD4</color>
+    <color name="md_theme_dark_background">#1F1A1B</color>
+    <color name="md_theme_dark_onBackground">#EBE0E1</color>
+    <color name="md_theme_dark_surface">#1F1A1B</color>
+    <color name="md_theme_dark_onSurface">#EBE0E1</color>
+    <color name="md_theme_dark_surfaceVariant">#514347</color>
+    <color name="md_theme_dark_onSurfaceVariant">#D5C2C6</color>
+    <color name="md_theme_dark_outline">#9E8C90</color>
+    <color name="md_theme_dark_inverseOnSurface">#1F1A1B</color>
+    <color name="md_theme_dark_inverseSurface">#EBE0E1</color>
+    <color name="md_theme_dark_inversePrimary">#994062</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_primaryInverse">#994062</color>
+    <color name="seed">#F48FB1</color>
+    <color name="error">#BA1B1B</color>
 
-    <color name="timerProgressBarTrackColor">#336200EE</color>
+    <color name="light_track_color">#33994062</color>
+    <color name="dark_track_color">#33FFB1CB</color>
 </resources>
