--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Widget.App.TimerProgressBar" parent="Widget.MaterialComponents.CircularProgressIndicator">
-        <item name="trackColor">@color/timerProgressBarTrackColor</item>
+    <style name="Widget.App.TimerProgressBar" parent="Widget.Material3.CircularProgressIndicator">
         <item name="trackThickness">4dp</item>
         <item name="trackCornerRadius">2dp</item>
+        <item name="indicatorSize">@dimen/timer_size_big</item>
+        <item name="trackColor">?attr/trackColor</item>
         <!--TODO: видно засечки на trackCornerRadius-->
-    </style>
-
-    <style name="TextAppearance.App.Tab" parent="TextAppearance.MaterialComponents.Button">
-        <item name="textAllCaps">false</item>
-        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
