DatePickerDialog Calendar without ViewPager2

--- a/app/src/main/res/layout/task_create.xml
+++ b/app/src/main/res/layout/task_create.xml
@@ -16,8 +16,8 @@
         android:importantForAutofill="no"
         android:inputType="textCapSentences|textMultiLine"
         android:paddingStart="24dp"
-        android:paddingEnd="24dp"
         android:paddingTop="24dp"
+        android:paddingEnd="24dp"
         android:paddingBottom="12dp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,40 +29,40 @@
         android:hint="@string/description"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
         android:inputType="textCapSentences|textMultiLine"
         android:padding="12dp"
         android:paddingStart="24dp"
+        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
         app:layout_constraintTop_toBottomOf="@+id/task_create_edit_text" />
 
-    <!--TODO: заменить Button на IconButton, когда его выпустят-->
     <Button
         android:id="@+id/task_create_calendar_button"
-        style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="4dp"
+        style="@style/Widget.Material3.Button.IconButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_event_available_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_create_description_edit_text" />
 
     <Button
         android:id="@+id/task_create_priority_button"
-        style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        style="@style/Widget.Material3.Button.IconButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_priority_high_0"
-        app:layout_constraintTop_toTopOf="@+id/task_create_calendar_button"
-        app:layout_constraintStart_toEndOf="@+id/task_create_calendar_button" />
+        app:layout_constraintBottom_toBottomOf="@+id/task_create_calendar_button"
+        app:layout_constraintStart_toEndOf="@+id/task_create_calendar_button"
+        app:layout_constraintTop_toTopOf="@+id/task_create_calendar_button" />
 
     <Button
         android:id="@+id/task_create_project_button"
         style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_inventory_24"
         android:text="Проект"
         android:textColor="?android:attr/textColorSecondary"
+        app:layout_constraintBottom_toBottomOf="@+id/task_create_calendar_button"
         app:layout_constraintStart_toEndOf="@+id/task_create_priority_button"
         app:layout_constraintTop_toTopOf="@+id/task_create_calendar_button" />
 
@@ -71,11 +71,10 @@
         style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginEnd="4dp"
         android:paddingHorizontal="24dp"
         android:text="@string/save"
+        app:layout_constraintBottom_toBottomOf="@+id/task_create_calendar_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/task_create_calendar_button"
-        />
+        app:layout_constraintTop_toTopOf="@+id/task_create_calendar_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
