--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="ModalBottomSheetDialog" parent="Widget.MaterialComponents.BottomSheet.Modal">
-        <item name="backgroundTint">@android:color/white</item>
-        <item name="background">@android:color/white</item>
+        <item name="backgroundTint">?android:colorBackground</item>
+        <item name="background">?android:colorBackground</item>
     </style>
 </resources>
