--- a/app/src/main/res/layout/task_create.xml
+++ b/app/src/main/res/layout/task_create.xml
@@ -19,7 +19,9 @@
         android:paddingTop="24dp"
         android:paddingEnd="24dp"
         android:paddingBottom="12dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+        <requestFocus/>
+    </EditText>
 
     <EditText
         android:id="@+id/task_create_description_edit_text"
